--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<div class="ask">
 					
 						
-												<p> <span class="crush">HI Yanaaaaa</span> <br>
+												<p> <span class="crush">Hi, Pay!</span> <br>
 																Are you free right now? Let’s watch!</p>
 								<div class="btn">
 <a href="yes.html"><button id="btn1">Yes</button>		</a>			    <button id="btn2">No</button>
